--- a/style.css
+++ b/style.css
@@ -76,4 +76,5 @@ section {
     margin: 8px 8px;
     background-color: #fff;
     border-radius: 25px;
+    /* background: url(../social-site/image/a\ girl\ with\ hat.jpg); */
 }
